--- a/app/views/subjects/delete.html.erb
+++ b/app/views/subjects/delete.html.erb
@@ -3,7 +3,7 @@
 <div class="subjects delete">
 	<h2>Delete Subject</h2>
 
-	<%= form_for(:subject, :url => {:action => 'destroy', :id => @subject.id}) do |f| %>
+	<%= form_for(:subject, :url => {:action => 'destroy', :id => @page.id}) do |f| %>
 
 	<p>Are you sure you want to permanently delete this subject?</p>
 
