--- a/app/views/pages/delete.html.erb
+++ b/app/views/pages/delete.html.erb
@@ -5,7 +5,7 @@
 
 	<%= form_for(:page, :url => {:action => 'destroy', :id => @page.id}) do |f| %>
 
-	<p>Are you sure you want to permanently delete this subject?</p>
+	<p>Are you sure you want to permanently delete this page?</p>
 
 	<p class="reference-name"><%= @page.name %></p>
 
