--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -26,5 +26,9 @@
 			<th>Permalink</th>
 			<td><%= @page.permalink %></td>
 		</tr>
+		<tr>
+			<th>Subject ID</th>
+			<td><%= @page.subject_id %></td>
+		</tr>
 	</table>
 </div>
