--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -15,6 +15,14 @@
 				<td><%= f.text_field(:position) %></td>
 			</tr>
 			<tr>
+				<th>Subject ID</th>
+				<td><%= f.text_field(:subject_id) %></td>
+			</tr>
+			<tr>
+				<th>Permalink</th>
+				<td><%= f.text_field(:permalink) %></td>
+			</tr>
+			<tr>
 				<th>Visible</th>
 				<td><%= f.text_field(:visible) %></td>
 			</tr>
