--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -19,6 +19,10 @@
 				<td><%= f.text_field(:visible) %></td>
 			</tr>
 			<tr>
+				<th>Page ID</th>
+				<td><%= f.text_field(:page_id) %></td>
+			</tr>
+			<tr>
 				<th>Content</th>
 				<td><%= f.text_field(:content) %></td>
 			</tr>
