--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -19,12 +19,16 @@
 			<td><%= @section.position %></td>
 		</tr>
 		<tr>
+			<th>Page ID</th>
+			<td><%= @section.page_id %></td>
+		</tr>
+		<tr>
 			<th>Content</th>
-			<td><%= @section.position %></td>
+			<td><%= @section.content %></td>
 		</tr>
 		<tr>
 			<th>Content Type</th>
-			<td><%= @section.position %></td>
+			<td><%= @section.content_type %></td>
 		</tr>
 		<tr>
 			<th>Visible?</th>
