--- a/app/views/subjects/delete.html.erb
+++ b/app/views/subjects/delete.html.erb
@@ -1,9 +1,10 @@
+<% @page_title = "Subjects - Delete" %>
 <%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link') %>
 
 <div class="subjects delete">
 	<h2>Delete Subject</h2>
 
-	<%= form_for(:subject, :url => {:action => 'destroy', :id => @page.id}) do |f| %>
+	<%= form_for(:subject, :url => {:action => 'destroy', :id => @subject.id}) do |f| %>
 
 	<p>Are you sure you want to permanently delete this subject?</p>
 
