--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -19,7 +19,7 @@
 		<tr>
 			<td><%= page.position %></td>
 			<td><%= page.name %></td>
-			<td class="center"><%= page.visible ? 'Yes' : 'No' %></td>
+			<td class="center"><%= status_tag(page.visible) %></td>
 			<td class="center"><%= page.editors.size %></td>
 			<td class="center"><%= page.subject_id %></td>
 			<td class="center"><%= page.sections.size %></td>
