--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -2,12 +2,7 @@
 <html>
 	<head>
 		<title> CMS | <%= @page_title || "Admin" %></title>
-<style>
-	span.status { display: block; width: 10px; height: 10px;
-		margin: 0.25em auto; padding: 0; border: 1px solid #000000;}
-		span.status.true {background: green; color: green;}
-		span.status.false {background: red; color: red;}
-		</style>
+		<%= stylesheet_link_tag('application', :media => 'all') %>
 	</head>
 	<body>
 		<div id="header">
@@ -24,7 +19,7 @@
 		</div>
 		</div>
 		<div id="footer">
-			<p id="copyright">&copy; jeff.com / Jeff Gisin</p>
+			<p id="copyright">&copy; jgisin.com / Jeff Gisin</p>
 		</div>
 	</body>
 </html>
